--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                   d="M12 2C6.475 2 2 6.475 2 12C2 17.525 6.475 22 12 22C17.525 22 22 17.525 22 12C22 6.475 17.525 2 12 2ZM10 16.5V7.5L16 12L10 16.5Z" />
               </g>
             </svg>
-            <svg class="header__on-air-pause" id="onair-mus-pause" width="24" height="24" viewBox="0 0 24 24"
-              fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="header__on-air-pause visually-hidden" id="onair-mus-pause" width="24" height="24"
+              viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_24531_3491)">
                 <path
                   d="M12 2C6.475 2 2 6.475 2 12C2 17.525 6.475 22 12 22C17.525 22 22 17.525 22 12C22 6.475 17.525 2 12 2Z" />
@@ -186,8 +186,8 @@
                   d="M12 2C6.475 2 2 6.475 2 12C2 17.525 6.475 22 12 22C17.525 22 22 17.525 22 12C22 6.475 17.525 2 12 2ZM10 16.5V7.5L16 12L10 16.5Z" />
               </g>
             </svg>
-            <svg class="header__on-air-pause" id="onair-how-pause" width="24" height="24" viewBox="0 0 24 24"
-              fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="header__on-air-pause visually-hidden" id="onair-how-pause" width="24" height="24"
+              viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_24531_3491)">
                 <path
                   d="M12 2C6.475 2 2 6.475 2 12C2 17.525 6.475 22 12 22C17.525 22 22 17.525 22 12C22 6.475 17.525 2 12 2Z" />
@@ -251,7 +251,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -291,7 +291,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -331,7 +331,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -371,7 +371,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -410,7 +410,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -450,7 +450,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -489,7 +489,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -528,7 +528,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -569,7 +569,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -609,7 +609,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -649,7 +649,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -689,7 +689,7 @@
                     <path
                       d="M21.6924 31.7965L31.5716 24.7996C32.1428 24.3998 32.1428 23.6002 31.5716 23.2004L21.6924 16.2035C20.9943 15.7037 20 16.1835 20 17.0031V30.9969C20 31.8165 20.9943 32.2963 21.6924 31.7965Z" />
                   </svg>
-                  <svg class="podcast__pause-svg" width="48" height="48" viewBox="0 0 48 48" fill="none"
+                  <svg class="podcast__pause-svg visually-hidden" width="48" height="48" viewBox="0 0 48 48" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="24" cy="24" r="20" stroke-width="2" />
                     <rect x="19" y="15" width="2" height="18" rx="1" />
@@ -883,7 +883,7 @@
         </p>
         <div class="guest__assortment flex">
           <ul class="guest__accordion accordion-container list-reset">
-            <li class="guest__ac ac js-enabled is-active">
+            <li class="guest__ac ac">
               <button type="button" class="ac-trigger">
                 Блогеры
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
